<resources>
    <string name="app_name">Temperature Forecast</string>

    <string name="base_url">http://api.openweathermap.org/data/2.5/</string>
    <string name="api">7df6be8cb6c4895ec235848521c55e9b</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="json">json</string>
    <string name="cnt">5</string>

    <string name="retry">Retry</string>
    <string name="weather">Weather</string>
    <string name="forecast">Forecast</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>

    <string name="temperature">Temperature:\u0020\</string>
    <string name="celcius">\u0020\°C</string>
    <string name="wind_speed">Wind Speed:\u0020\</string>
    <string name="wind_direction">Wind Direction:\u0020\</string>
    <string name="degree">\u0020\°deg</string>
    <string name="mph">\u0020\mph</string>
    <string name="kph">\u0020\kph</string>
    <string name="humidity">Humidity:\u0020\</string>
    <string name="percent">%</string>
    <string name="rain">Rain probability:\u0020\</string>
    <string name="cloud">Cloud cover:\u0020\</string>
    <string name="dew">Dew Point:\u0020\</string>
    <string name="application_logo_description">application_logo_description</string>
    <string name="min">Min:&#160;</string>
    <string name="max">&#160;&#160;&#160;&#160;Max:&#160;</string>
    <string name="sunrise">Sunrise:&#160;</string>
    <string name="sunset">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Sunset:&#160;</string>

    <string name="permission_rationale">Location permission is needed for your local weather</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for weather
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="open_weather_require_permissions_to_see_your_location_please_accept">Open Weather requires location permissions for your area, please accept.</string>
    <string name="location_button">location_button</string>
    <string name="title_activity_maps">Map</string>
    <string name="icon_url">https://openweathermap.org/img/w/</string>
    <string name="loading_your_location">Loading your location</string>
    <string name="png">.png</string>

    <string name="transition_string">map_transition_id</string>
    <string name="tile_url">http://tile.openweathermap.org/map/%s/%d/%d/%d.png?appid=ab76296461f49ff0bbe06aef0933e929</string>

<!--
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCFxB7X4GP4WgaikF5eT7PN_kQ0QneqP5k</string>
-->

</resources>
