<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".ui.weather.WeatherActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="@color/light_blue"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:contentDescription="@string/temperature"
                            app:srcCompat="@drawable/temperature" />

                        <TextView
                            android:id="@+id/tvTemperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/weather_text" />

                    </TableRow>

                    <TextView
                        android:id="@+id/tvTemperatureMinMax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:gravity="start|center_horizontal"
                        android:textAlignment="gravity"
                        android:textSize="@dimen/text_sm"
                        android:textStyle="italic" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:contentDescription="@string/wind_speed"
                            app:srcCompat="@drawable/windspeed" />

                        <TextView
                            android:id="@+id/tvWindSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/weather_text" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/ivWindDirection"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:contentDescription="@string/wind_direction"
                            app:srcCompat="@drawable/compass" />

                        <TextView
                            android:id="@+id/tvWindDirection"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/weather_text" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:contentDescription="@string/humidity"
                            app:srcCompat="@drawable/humidity" />

                        <TextView
                            android:id="@+id/tvHumidity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="20dp"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/weather_text" />
                    </TableRow>

                </TableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"
                    android:padding="0dp" />

                <TextView
                    android:id="@+id/tvSunUpDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:textSize="@dimen/text_sun"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ibForecast"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:contentDescription="@string/forecast" />

                    <ImageView
                        android:id="@+id/ivWeather"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/weather" />

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/weather_text"
                        android:textStyle="bold" />

                    <fragment
                        android:id="@+id/fThumbMap"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="4dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvMain">

            <fragment
                android:id="@+id/fMap"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:transitionName="@string/transition_string" />

            <!--
                        <ImageView
                            android:id="@+id/ivExpand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|end"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/expand"
                            android:src="@drawable/expand"
                            android:visibility="visible" />
            -->

        </FrameLayout>

    </RelativeLayout>

</layout>